// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tailwind-to-stylex transforms command-menu.js 1`] = `
"'use client';

import * as _stylex from "@stylexjs/stylex";
import * as React from 'react';
import { useRouter } from 'next/navigation';
import { DialogProps } from '@radix-ui/react-alert-dialog';
import { CircleIcon, FileIcon, LaptopIcon, MoonIcon, SunIcon } from '@radix-ui/react-icons';
import { useTheme } from 'next-themes';
import { docsConfig } from '@/config/docs';
import { cn } from '@/lib/utils';
import { Button } from '@/registry/new-york/ui/button';
import { CommandDialog, CommandEmpty, CommandGroup, CommandInput, CommandItem, CommandList, CommandSeparator } from '@/registry/new-york/ui/command';
export function CommandMenu({
  ...props
}: DialogProps) {
  const router = useRouter();
  const [open, setOpen] = React.useState(false);
  const {
    setTheme
  } = useTheme();
  React.useEffect(() => {
    const down = (e: KeyboardEvent) => {
      if (e.key === 'k' && (e.metaKey || e.ctrlKey)) {
        e.preventDefault();
        setOpen(open => !open);
      }
    };
    document.addEventListener('keydown', down);
    return () => document.removeEventListener('keydown', down);
  }, []);
  const runCommand = React.useCallback((command: () => unknown) => {
    setOpen(false);
    command();
  }, []);
  return <>
      <Button variant="outline" className={[_styles.$5]} onClick={() => setOpen(true)} {...props}>
        <span {..._stylex.props(_styles.$6)}>Search documentation...</span>
        <span {..._stylex.props(_styles.$7)}>Search...</span>
        <kbd {..._stylex.props(_styles.$8)}>
          <span {..._stylex.props(_styles.$9)}>⌘</span>K
        </kbd>
      </Button>
      <CommandDialog open={open} onOpenChange={setOpen}>
        <CommandInput placeholder="Type a command or search..." />
        <CommandList>
          <CommandEmpty>No results found.</CommandEmpty>
          <CommandGroup heading="Links">
            {docsConfig.mainNav.filter(navitem => !navitem.external).map(navItem => <CommandItem key={navItem.href} value={navItem.title} onSelect={() => {
            runCommand(() => router.push((navItem.href as string)));
          }}>
                  <FileIcon className={_styles.$10} />
                  {navItem.title}
                </CommandItem>)}
          </CommandGroup>
          {docsConfig.sidebarNav.map(group => <CommandGroup key={group.title} heading={group.title}>
              {group.items.map(navItem => <CommandItem key={navItem.href} value={navItem.title} onSelect={() => {
            runCommand(() => router.push((navItem.href as string)));
          }}>
                  <div {..._stylex.props(_styles.$11)}>
                    <CircleIcon className={_styles.$12} />
                  </div>
                  {navItem.title}
                </CommandItem>)}
            </CommandGroup>)}
          <CommandSeparator />
          <CommandGroup heading="Theme">
            <CommandItem onSelect={() => runCommand(() => setTheme('light'))}>
              <SunIcon className={_styles.$10} />
              Light
            </CommandItem>
            <CommandItem onSelect={() => runCommand(() => setTheme('dark'))}>
              <MoonIcon className={_styles.$10} />
              Dark
            </CommandItem>
            <CommandItem onSelect={() => runCommand(() => setTheme('system'))}>
              <LaptopIcon className={_styles.$10} />
              System
            </CommandItem>
          </CommandGroup>
        </CommandList>
      </CommandDialog>
    </>;
}
const _styles = _stylex.create({
  $1: {
    display: "flex",
    backgroundColor: {
      default: "#10B981",
      ":hover": "#EF4444"
    }
  },
  $2: {
    position: "fixed",
    top: "0",
    right: "0",
    bottom: "0",
    left: "0",
    zIndex: 50
  },
  $3: {
    position: "fixed",
    right: "0",
    left: "0",
    bottom: "0",
    zIndex: 50,
    marginTop: "6rem",
    height: "96%"
  },
  $4: {
    position: "absolute",
    top: "0.75rem",
    left: "50%",
    borderRadius: "9999px",
    height: "0.5rem",
    width: "100px"
  },
  $5: {
    position: "relative",
    justifyContent: "flex-start",
    width: {
      default: {
        default: "100%",
        "@media (min-width: 768px)": "10rem"
      },
      "@media (min-width: 1024px)": "16rem"
    },
    fontSize: "0.875rem",
    lineHeight: "1.25rem",
    paddingRight: {
      default: null,
      "@media (min-width: 640px)": "3rem"
    }
  },
  $6: {
    display: {
      default: "none",
      "@media (min-width: 1024px)": "inline-flex"
    }
  },
  $7: {
    display: {
      default: "inline-flex",
      "@media (min-width: 1024px)": "none"
    }
  },
  $8: {
    display: {
      default: "none",
      "@media (min-width: 640px)": "flex"
    },
    position: "absolute",
    top: "0.375rem",
    right: "0.375rem",
    paddingLeft: "0.375rem",
    paddingRight: "0.375rem",
    gap: "0.25rem",
    alignItems: "center",
    borderRadius: "0.25rem",
    borderWidth: "1px",
    height: "1.25rem",
    fontFamily: "Menlo, Monaco, Consolas, \\"Liberation Mono\\", \\"Courier New\\", monospace",
    fontWeight: 500,
    pointerEvents: "none",
    userSelect: "none",
    opacity: 1,
    color: "10px"
  },
  $9: {
    fontSize: "0.75rem",
    lineHeight: "1rem"
  },
  $10: {
    marginRight: "0.5rem",
    width: "1rem",
    height: "1rem"
  },
  $11: {
    display: "flex",
    marginRight: "0.5rem",
    justifyContent: "center",
    alignItems: "center",
    width: "1rem",
    height: "1rem"
  },
  $12: {
    width: "0.75rem",
    height: "0.75rem"
  }
});"
`;

exports[`tailwind-to-stylex transforms form.js 1`] = `
"import * as _stylex from "@stylexjs/stylex";
/**
 * v0 by Vercel.
 * @see https://v0.dev/t/WfjCkNNqj9B
 */
import { CardTitle, CardDescription, CardHeader, CardContent, CardFooter, Card } from '@/components/ui/card';
import { Label } from '@/components/ui/label';
import { Input } from '@/components/ui/input';
import { Button } from '@/components/ui/button';
import Link from 'next/link';
export default function Component() {
  return <Card>
      <CardHeader>
        <CardTitle>Uniswap Slot0 Information</CardTitle>
        <CardDescription>
          Detailed pool data for the selected Uniswap slot0.
        </CardDescription>
      </CardHeader>
      <CardContent>
        <div {..._stylex.props(_styles.$13)}>
          <div {..._stylex.props(_styles.$14)}>
            <Label htmlFor="sqrtPriceX96">Sqrt Price X96</Label>
            <Input disabled id="sqrtPriceX96" placeholder="Sqrt Price X96" />
          </div>
          <div {..._stylex.props(_styles.$14)}>
            <Label htmlFor="tick">Tick</Label>
            <Input disabled id="tick" placeholder="Tick" />
          </div>
          <div {..._stylex.props(_styles.$14)}>
            <Label htmlFor="observationIndex">Observation Index</Label>
            <Input disabled id="observationIndex" placeholder="Observation Index" />
          </div>
          <div {..._stylex.props(_styles.$14)}>
            <Label htmlFor="observationCardinality">
              Observation Cardinality
            </Label>
            <Input disabled id="observationCardinality" placeholder="Observation Cardinality" />
          </div>
          <div {..._stylex.props(_styles.$14)}>
            <Label htmlFor="observationCardinalityNext">
              Observation Cardinality Next
            </Label>
            <Input disabled id="observationCardinalityNext" placeholder="Observation Cardinality Next" />
          </div>
          <div {..._stylex.props(_styles.$14)}>
            <Label htmlFor="feeProtocol">Fee Protocol</Label>
            <Input disabled id="feeProtocol" placeholder="Fee Protocol" />
          </div>
          <div {..._stylex.props(_styles.$14)}>
            <Label htmlFor="unlocked">Unlocked</Label>
            <Input disabled id="unlocked" placeholder="Unlocked" />
          </div>
        </div>
      </CardContent>
      <CardFooter className={_styles.$15}>
        <Button variant="outline">Refresh</Button>
        <Link className={_styles.$16} href="#">
          More Details
        </Link>
      </CardFooter>
    </Card>;
}
const _styles = _stylex.create({
  $1: {
    display: "flex",
    backgroundColor: {
      default: "#10B981",
      ":hover": "#EF4444"
    }
  },
  $2: {
    position: "fixed",
    top: "0",
    right: "0",
    bottom: "0",
    left: "0",
    zIndex: 50
  },
  $3: {
    position: "fixed",
    right: "0",
    left: "0",
    bottom: "0",
    zIndex: 50,
    marginTop: "6rem",
    height: "96%"
  },
  $4: {
    position: "absolute",
    top: "0.75rem",
    left: "50%",
    borderRadius: "9999px",
    height: "0.5rem",
    width: "100px"
  },
  $5: {
    position: "relative",
    justifyContent: "flex-start",
    width: {
      default: {
        default: "100%",
        "@media (min-width: 768px)": "10rem"
      },
      "@media (min-width: 1024px)": "16rem"
    },
    fontSize: "0.875rem",
    lineHeight: "1.25rem",
    paddingRight: {
      default: null,
      "@media (min-width: 640px)": "3rem"
    }
  },
  $6: {
    display: {
      default: "none",
      "@media (min-width: 1024px)": "inline-flex"
    }
  },
  $7: {
    display: {
      default: "inline-flex",
      "@media (min-width: 1024px)": "none"
    }
  },
  $8: {
    display: {
      default: "none",
      "@media (min-width: 640px)": "flex"
    },
    position: "absolute",
    top: "0.375rem",
    right: "0.375rem",
    paddingLeft: "0.375rem",
    paddingRight: "0.375rem",
    gap: "0.25rem",
    alignItems: "center",
    borderRadius: "0.25rem",
    borderWidth: "1px",
    height: "1.25rem",
    fontFamily: "Menlo, Monaco, Consolas, \\"Liberation Mono\\", \\"Courier New\\", monospace",
    fontWeight: 500,
    pointerEvents: "none",
    userSelect: "none",
    opacity: 1,
    color: "10px"
  },
  $9: {
    fontSize: "0.75rem",
    lineHeight: "1rem"
  },
  $10: {
    marginRight: "0.5rem",
    width: "1rem",
    height: "1rem"
  },
  $11: {
    display: "flex",
    marginRight: "0.5rem",
    justifyContent: "center",
    alignItems: "center",
    width: "1rem",
    height: "1rem"
  },
  $12: {
    width: "0.75rem",
    height: "0.75rem"
  },
  $13: {
    display: "grid",
    gridTemplateColumns: "repeat(2, minmax(0, 1fr))",
    gap: "1rem",
    fontSize: "0.875rem",
    lineHeight: "1.25rem"
  },
  $14: {
    display: "flex",
    marginTop: "0.375rem",
    flexDirection: "column"
  },
  $15: {
    display: "flex",
    justifyContent: "space-between"
  },
  $16: {
    color: "#3B82F6"
  }
});"
`;

exports[`tailwind-to-stylex transforms portfolio.js 1`] = `
"import * as _stylex from "@stylexjs/stylex";
/**
 * v0 by Vercel.
 * @see https://v0.dev/t/u18ILcKLQhV
 */
import Link from 'next/link';
import { CardHeader, CardFooter, Card } from '@/components/ui/card';
import { Input } from '@/components/ui/input';
import { Button } from '@/components/ui/button';
export default function Component() {
  return <section {..._stylex.props(_styles.$17)}>
      <header {..._stylex.props(_styles.$18)}>
        <Link className={_styles.$19} href="#">
          <IconMountain className={_styles.$20} />
          <span {..._stylex.props(_styles.$21)}>Portfolio</span>
        </Link>
        <nav {..._stylex.props(_styles.$22)}>
          <Link className={_styles.$23} href="#">
            About
          </Link>
          <Link className={_styles.$23} href="#">
            Education
          </Link>
          <Link className={_styles.$23} href="#">
            Projects
          </Link>
          <Link className={_styles.$23} href="#">
            Contact
          </Link>
        </nav>
      </header>
      <div {..._stylex.props(_styles.$24)}>
        <div {..._stylex.props(_styles.$25)}>
          <h1 {..._stylex.props(_styles.$26)}>
            Welcome to My Portfolio
          </h1>
          <p {..._stylex.props(_styles.$27)}>
            A high school student aspiring to innovate and create.
          </p>
          <Link className={_styles.$28} href="#">
            Contact Me
          </Link>
        </div>
      </div>
      <div {..._stylex.props(_styles.$29)} id="about">
        <h2 {..._stylex.props(_styles.$30)}>
          About Me
        </h2>
        <p {..._stylex.props(_styles.$27)}>
          I am a high school student passionate about technology and problem
          solving. I enjoy coding, robotics, and exploring new technologies.
        </p>
      </div>
      <div {..._stylex.props(_styles.$29)} id="education">
        <h2 {..._stylex.props(_styles.$30)}>
          Education
        </h2>
        <p {..._stylex.props(_styles.$27)}>
          I am currently attending XYZ High School with an expected graduation
          year of 2025.
        </p>
      </div>
      <div {..._stylex.props(_styles.$31)} id="projects">
        <Card>
          <CardHeader>
            <h3 {..._stylex.props(_styles.$32)}>Project 1</h3>
          </CardHeader>
          <div>
            <p {..._stylex.props(_styles.$33)}>
              This is a brief description of my project. It includes details
              about the technologies I used and the problems I solved.
            </p>
          </div>
          <CardFooter>
            <Link className={_styles.$23} href="#">
              View Project
            </Link>
          </CardFooter>
        </Card>
        <Card>
          <CardHeader>
            <h3 {..._stylex.props(_styles.$32)}>Project 2</h3>
          </CardHeader>
          <div>
            <p {..._stylex.props(_styles.$33)}>
              This is a brief description of my project. It includes details
              about the technologies I used and the problems I solved.
            </p>
          </div>
          <CardFooter>
            <Link className={_styles.$23} href="#">
              View Project
            </Link>
          </CardFooter>
        </Card>
        <Card>
          <CardHeader>
            <h3 {..._stylex.props(_styles.$32)}>Project 3</h3>
          </CardHeader>
          <div>
            <p {..._stylex.props(_styles.$33)}>
              This is a brief description of my project. It includes details
              about the technologies I used and the problems I solved.
            </p>
          </div>
          <CardFooter>
            <Link className={_styles.$23} href="#">
              View Project
            </Link>
          </CardFooter>
        </Card>
      </div>
      <div {..._stylex.props(_styles.$29)} id="contact">
        <h2 {..._stylex.props(_styles.$30)}>
          Contact Me
        </h2>
        <form {..._stylex.props(_styles.$34)}>
          <div {..._stylex.props(_styles.$35)}>
            <div {..._stylex.props(_styles.$36)}>
              <label {..._stylex.props(_styles.$37)} htmlFor="grid-first-name">
                Name
              </label>
              <Input id="grid-first-name" placeholder="Name" type="text" />
            </div>
            <div {..._stylex.props(_styles.$38)}>
              <label {..._stylex.props(_styles.$37)} htmlFor="grid-last-name">
                Email
              </label>
              <Input id="grid-last-name" placeholder="Email" type="email" />
            </div>
          </div>
          <div {..._stylex.props(_styles.$35)}>
            <div {..._stylex.props(_styles.$39)}>
              <label {..._stylex.props(_styles.$37)} htmlFor="grid-password">
                Message
              </label>
              <Input id="grid-password" placeholder="Your message" type="text" />
            </div>
          </div>
          <Button type="submit">Send Message</Button>
        </form>
      </div>
    </section>;
}
function IconMountain(props) {
  return <svg {...props} xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round">
      <path d="m8 3 4 8 5-5 5 15H2L8 3z" />
    </svg>;
}
const _styles = _stylex.create({
  $1: {
    display: "flex",
    backgroundColor: {
      default: "#10B981",
      ":hover": "#EF4444"
    }
  },
  $2: {
    position: "fixed",
    top: "0",
    right: "0",
    bottom: "0",
    left: "0",
    zIndex: 50
  },
  $3: {
    position: "fixed",
    right: "0",
    left: "0",
    bottom: "0",
    zIndex: 50,
    marginTop: "6rem",
    height: "96%"
  },
  $4: {
    position: "absolute",
    top: "0.75rem",
    left: "50%",
    borderRadius: "9999px",
    height: "0.5rem",
    width: "100px"
  },
  $5: {
    position: "relative",
    justifyContent: "flex-start",
    width: {
      default: {
        default: "100%",
        "@media (min-width: 768px)": "10rem"
      },
      "@media (min-width: 1024px)": "16rem"
    },
    fontSize: "0.875rem",
    lineHeight: "1.25rem",
    paddingRight: {
      default: null,
      "@media (min-width: 640px)": "3rem"
    }
  },
  $6: {
    display: {
      default: "none",
      "@media (min-width: 1024px)": "inline-flex"
    }
  },
  $7: {
    display: {
      default: "inline-flex",
      "@media (min-width: 1024px)": "none"
    }
  },
  $8: {
    display: {
      default: "none",
      "@media (min-width: 640px)": "flex"
    },
    position: "absolute",
    top: "0.375rem",
    right: "0.375rem",
    paddingLeft: "0.375rem",
    paddingRight: "0.375rem",
    gap: "0.25rem",
    alignItems: "center",
    borderRadius: "0.25rem",
    borderWidth: "1px",
    height: "1.25rem",
    fontFamily: "Menlo, Monaco, Consolas, \\"Liberation Mono\\", \\"Courier New\\", monospace",
    fontWeight: 500,
    pointerEvents: "none",
    userSelect: "none",
    opacity: 1,
    color: "10px"
  },
  $9: {
    fontSize: "0.75rem",
    lineHeight: "1rem"
  },
  $10: {
    marginRight: "0.5rem",
    width: "1rem",
    height: "1rem"
  },
  $11: {
    display: "flex",
    marginRight: "0.5rem",
    justifyContent: "center",
    alignItems: "center",
    width: "1rem",
    height: "1rem"
  },
  $12: {
    width: "0.75rem",
    height: "0.75rem"
  },
  $13: {
    display: "grid",
    gridTemplateColumns: "repeat(2, minmax(0, 1fr))",
    gap: "1rem",
    fontSize: "0.875rem",
    lineHeight: "1.25rem"
  },
  $14: {
    display: "flex",
    marginTop: "0.375rem",
    flexDirection: "column"
  },
  $15: {
    display: "flex",
    justifyContent: "space-between"
  },
  $16: {
    color: "#3B82F6"
  },
  $17: {
    paddingTop: "3rem",
    paddingBottom: "3rem",
    width: "100%"
  },
  $18: {
    display: "flex",
    paddingLeft: {
      default: "1rem",
      "@media (min-width: 1024px)": "1.5rem"
    },
    paddingRight: {
      default: "1rem",
      "@media (min-width: 1024px)": "1.5rem"
    },
    alignItems: "center",
    height: "3.5rem"
  },
  $19: {
    display: "flex",
    justifyContent: "center",
    alignItems: "center"
  },
  $20: {
    width: "1.5rem",
    height: "1.5rem"
  },
  $21: {
    position: "absolute",
    width: "1px",
    height: "1px",
    padding: "0",
    margin: "-1px",
    overflow: "hidden",
    clip: "rect(0, 0, 0, 0)",
    whiteSpace: "nowrap",
    borderWidth: "0"
  },
  $22: {
    display: "flex",
    gap: {
      default: "1rem",
      "@media (min-width: 640px)": "1.5rem"
    }
  },
  $23: {
    fontSize: "0.875rem",
    lineHeight: "1.25rem",
    fontWeight: 500,
    textUnderlineOffset: "4px",
    textDecoration: {
      default: null,
      ":hover": "underline"
    }
  },
  $24: {
    width: "100%",
    paddingLeft: {
      default: "1rem",
      "@media (min-width: 768px)": "1.5rem"
    },
    paddingRight: {
      default: "1rem",
      "@media (min-width: 768px)": "1.5rem"
    }
  },
  $25: {
    display: "flex",
    marginTop: "1rem",
    flexDirection: "column",
    justifyContent: "center"
  },
  $26: {
    fontSize: {
      default: "1.875rem",
      "@media (min-width: 640px)": "3rem"
    },
    lineHeight: {
      default: "2.25rem",
      "@media (min-width: 640px)": 1
    },
    fontWeight: 700,
    letterSpacing: "-0.05em"
  },
  $27: {
    color: "#6B7280",
    maxWidth: "600px",
    fontSize: {
      default: null,
      "@media (min-width: 768px)": "1.25rem"
    },
    lineHeight: {
      default: null,
      "@media (min-width: 768px)": "1.75rem"
    }
  },
  $28: {
    display: "inline-flex",
    paddingLeft: "2rem",
    paddingRight: "2rem",
    justifyContent: "center",
    alignItems: "center",
    borderRadius: "0.375rem",
    height: "2.5rem",
    fontSize: "0.875rem",
    lineHeight: "1.25rem",
    fontWeight: 500,
    color: "#F9FAFB",
    backgroundColor: "#111827",
    transitionProperty: "color, background-color, border-color, text-decoration-color, fill, stroke",
    transitionTimingFunction: "cubic-bezier(0.4, 0, 0.2, 1)",
    transitionDuration: "300ms",
    boxShadow: "0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06)"
  },
  $29: {
    width: "100%",
    paddingLeft: {
      default: "1rem",
      "@media (min-width: 768px)": "1.5rem"
    },
    paddingRight: {
      default: "1rem",
      "@media (min-width: 768px)": "1.5rem"
    },
    paddingTop: "3rem",
    paddingBottom: "3rem"
  },
  $30: {
    fontSize: {
      default: "1.875rem",
      "@media (min-width: 640px)": "2.25rem"
    },
    lineHeight: {
      default: "2.25rem",
      "@media (min-width: 640px)": "2.5rem"
    },
    fontWeight: 700,
    letterSpacing: "-0.05em"
  },
  $31: {
    width: "100%",
    display: "grid",
    paddingLeft: {
      default: "1rem",
      "@media (min-width: 768px)": "1.5rem"
    },
    paddingRight: {
      default: "1rem",
      "@media (min-width: 768px)": "1.5rem"
    },
    paddingTop: "3rem",
    paddingBottom: "3rem",
    gap: "1.5rem",
    gridTemplateColumns: {
      default: {
        default: null,
        "@media (min-width: 640px)": "repeat(2, minmax(0, 1fr))"
      },
      "@media (min-width: 768px)": "repeat(3, minmax(0, 1fr))"
    }
  },
  $32: {
    fontSize: "1.125rem",
    lineHeight: "1.75rem",
    fontWeight: 700
  },
  $33: {
    fontSize: "0.875rem",
    lineHeight: "1.25rem",
    color: "#6B7280"
  },
  $34: {
    marginTop: "1.5rem",
    width: "100%",
    maxWidth: "32rem"
  },
  $35: {
    display: "flex",
    marginBottom: "1.5rem",
    marginLeft: "-0.75rem",
    marginRight: "-0.75rem",
    flexWrap: "wrap"
  },
  $36: {
    paddingLeft: "0.75rem",
    paddingRight: "0.75rem",
    marginBottom: {
      default: "1.5rem",
      "@media (min-width: 768px)": "0"
    },
    width: {
      default: "100%",
      "@media (min-width: 768px)": "50%"
    }
  },
  $37: {
    display: "block",
    marginBottom: "0.5rem",
    fontSize: "0.75rem",
    lineHeight: "1rem",
    fontWeight: 700,
    letterSpacing: "0.025em",
    color: "#374151",
    textTransform: "uppercase"
  },
  $38: {
    paddingLeft: "0.75rem",
    paddingRight: "0.75rem",
    width: {
      default: "100%",
      "@media (min-width: 768px)": "50%"
    }
  },
  $39: {
    paddingLeft: "0.75rem",
    paddingRight: "0.75rem",
    width: "100%"
  }
});"
`;

exports[`tailwind-to-stylex transforms theme-toggle.js 1`] = `
"/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 *
 */

'use client';

import * as _stylex from "@stylexjs/stylex";
import * as React from 'react';
import { Moon, Sun } from 'lucide-react';
import { useTheme } from 'next-themes';
import { Button } from '@/components/ui/button';
export function ThemeToggle() {
  const {
    setTheme,
    theme
  } = useTheme();
  return <Button variant="ghost" size="icon" onClick={() => setTheme(theme === 'light' ? 'dark' : 'light')}>
      <Sun className={_styles.$40} />
      <Moon className={_styles.$41} />
      <span {..._stylex.props(_styles.$21)}>Toggle theme</span>
    </Button>;
}
const _styles = _stylex.create({
  $1: {
    display: "flex",
    backgroundColor: {
      default: "#10B981",
      ":hover": "#EF4444"
    }
  },
  $2: {
    position: "fixed",
    top: "0",
    right: "0",
    bottom: "0",
    left: "0",
    zIndex: 50
  },
  $3: {
    position: "fixed",
    right: "0",
    left: "0",
    bottom: "0",
    zIndex: 50,
    marginTop: "6rem",
    height: "96%"
  },
  $4: {
    position: "absolute",
    top: "0.75rem",
    left: "50%",
    borderRadius: "9999px",
    height: "0.5rem",
    width: "100px"
  },
  $5: {
    position: "relative",
    justifyContent: "flex-start",
    width: {
      default: {
        default: "100%",
        "@media (min-width: 768px)": "10rem"
      },
      "@media (min-width: 1024px)": "16rem"
    },
    fontSize: "0.875rem",
    lineHeight: "1.25rem",
    paddingRight: {
      default: null,
      "@media (min-width: 640px)": "3rem"
    }
  },
  $6: {
    display: {
      default: "none",
      "@media (min-width: 1024px)": "inline-flex"
    }
  },
  $7: {
    display: {
      default: "inline-flex",
      "@media (min-width: 1024px)": "none"
    }
  },
  $8: {
    display: {
      default: "none",
      "@media (min-width: 640px)": "flex"
    },
    position: "absolute",
    top: "0.375rem",
    right: "0.375rem",
    paddingLeft: "0.375rem",
    paddingRight: "0.375rem",
    gap: "0.25rem",
    alignItems: "center",
    borderRadius: "0.25rem",
    borderWidth: "1px",
    height: "1.25rem",
    fontFamily: "Menlo, Monaco, Consolas, \\"Liberation Mono\\", \\"Courier New\\", monospace",
    fontWeight: 500,
    pointerEvents: "none",
    userSelect: "none",
    opacity: 1,
    color: "10px"
  },
  $9: {
    fontSize: "0.75rem",
    lineHeight: "1rem"
  },
  $10: {
    marginRight: "0.5rem",
    width: "1rem",
    height: "1rem"
  },
  $11: {
    display: "flex",
    marginRight: "0.5rem",
    justifyContent: "center",
    alignItems: "center",
    width: "1rem",
    height: "1rem"
  },
  $12: {
    width: "0.75rem",
    height: "0.75rem"
  },
  $13: {
    display: "grid",
    gridTemplateColumns: "repeat(2, minmax(0, 1fr))",
    gap: "1rem",
    fontSize: "0.875rem",
    lineHeight: "1.25rem"
  },
  $14: {
    display: "flex",
    marginTop: "0.375rem",
    flexDirection: "column"
  },
  $15: {
    display: "flex",
    justifyContent: "space-between"
  },
  $16: {
    color: "#3B82F6"
  },
  $17: {
    paddingTop: "3rem",
    paddingBottom: "3rem",
    width: "100%"
  },
  $18: {
    display: "flex",
    paddingLeft: {
      default: "1rem",
      "@media (min-width: 1024px)": "1.5rem"
    },
    paddingRight: {
      default: "1rem",
      "@media (min-width: 1024px)": "1.5rem"
    },
    alignItems: "center",
    height: "3.5rem"
  },
  $19: {
    display: "flex",
    justifyContent: "center",
    alignItems: "center"
  },
  $20: {
    width: "1.5rem",
    height: "1.5rem"
  },
  $21: {
    position: "absolute",
    width: "1px",
    height: "1px",
    padding: "0",
    margin: "-1px",
    overflow: "hidden",
    clip: "rect(0, 0, 0, 0)",
    whiteSpace: "nowrap",
    borderWidth: "0"
  },
  $22: {
    display: "flex",
    gap: {
      default: "1rem",
      "@media (min-width: 640px)": "1.5rem"
    }
  },
  $23: {
    fontSize: "0.875rem",
    lineHeight: "1.25rem",
    fontWeight: 500,
    textUnderlineOffset: "4px",
    textDecoration: {
      default: null,
      ":hover": "underline"
    }
  },
  $24: {
    width: "100%",
    paddingLeft: {
      default: "1rem",
      "@media (min-width: 768px)": "1.5rem"
    },
    paddingRight: {
      default: "1rem",
      "@media (min-width: 768px)": "1.5rem"
    }
  },
  $25: {
    display: "flex",
    marginTop: "1rem",
    flexDirection: "column",
    justifyContent: "center"
  },
  $26: {
    fontSize: {
      default: "1.875rem",
      "@media (min-width: 640px)": "3rem"
    },
    lineHeight: {
      default: "2.25rem",
      "@media (min-width: 640px)": 1
    },
    fontWeight: 700,
    letterSpacing: "-0.05em"
  },
  $27: {
    color: "#6B7280",
    maxWidth: "600px",
    fontSize: {
      default: null,
      "@media (min-width: 768px)": "1.25rem"
    },
    lineHeight: {
      default: null,
      "@media (min-width: 768px)": "1.75rem"
    }
  },
  $28: {
    display: "inline-flex",
    paddingLeft: "2rem",
    paddingRight: "2rem",
    justifyContent: "center",
    alignItems: "center",
    borderRadius: "0.375rem",
    height: "2.5rem",
    fontSize: "0.875rem",
    lineHeight: "1.25rem",
    fontWeight: 500,
    color: "#F9FAFB",
    backgroundColor: "#111827",
    transitionProperty: "color, background-color, border-color, text-decoration-color, fill, stroke",
    transitionTimingFunction: "cubic-bezier(0.4, 0, 0.2, 1)",
    transitionDuration: "300ms",
    boxShadow: "0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06)"
  },
  $29: {
    width: "100%",
    paddingLeft: {
      default: "1rem",
      "@media (min-width: 768px)": "1.5rem"
    },
    paddingRight: {
      default: "1rem",
      "@media (min-width: 768px)": "1.5rem"
    },
    paddingTop: "3rem",
    paddingBottom: "3rem"
  },
  $30: {
    fontSize: {
      default: "1.875rem",
      "@media (min-width: 640px)": "2.25rem"
    },
    lineHeight: {
      default: "2.25rem",
      "@media (min-width: 640px)": "2.5rem"
    },
    fontWeight: 700,
    letterSpacing: "-0.05em"
  },
  $31: {
    width: "100%",
    display: "grid",
    paddingLeft: {
      default: "1rem",
      "@media (min-width: 768px)": "1.5rem"
    },
    paddingRight: {
      default: "1rem",
      "@media (min-width: 768px)": "1.5rem"
    },
    paddingTop: "3rem",
    paddingBottom: "3rem",
    gap: "1.5rem",
    gridTemplateColumns: {
      default: {
        default: null,
        "@media (min-width: 640px)": "repeat(2, minmax(0, 1fr))"
      },
      "@media (min-width: 768px)": "repeat(3, minmax(0, 1fr))"
    }
  },
  $32: {
    fontSize: "1.125rem",
    lineHeight: "1.75rem",
    fontWeight: 700
  },
  $33: {
    fontSize: "0.875rem",
    lineHeight: "1.25rem",
    color: "#6B7280"
  },
  $34: {
    marginTop: "1.5rem",
    width: "100%",
    maxWidth: "32rem"
  },
  $35: {
    display: "flex",
    marginBottom: "1.5rem",
    marginLeft: "-0.75rem",
    marginRight: "-0.75rem",
    flexWrap: "wrap"
  },
  $36: {
    paddingLeft: "0.75rem",
    paddingRight: "0.75rem",
    marginBottom: {
      default: "1.5rem",
      "@media (min-width: 768px)": "0"
    },
    width: {
      default: "100%",
      "@media (min-width: 768px)": "50%"
    }
  },
  $37: {
    display: "block",
    marginBottom: "0.5rem",
    fontSize: "0.75rem",
    lineHeight: "1rem",
    fontWeight: 700,
    letterSpacing: "0.025em",
    color: "#374151",
    textTransform: "uppercase"
  },
  $38: {
    paddingLeft: "0.75rem",
    paddingRight: "0.75rem",
    width: {
      default: "100%",
      "@media (min-width: 768px)": "50%"
    }
  },
  $39: {
    paddingLeft: "0.75rem",
    paddingRight: "0.75rem",
    width: "100%"
  },
  $40: {
    height: "1.5rem",
    width: "1.3rem"
  },
  $41: {
    display: "none",
    width: "1.25rem",
    height: "1.25rem"
  }
});"
`;
